fixed body component grid and component alignment

--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -9,7 +9,7 @@
   /* Body grid layout */
 
   display: grid;
-  grid-template-columns: 3fr repeat(2, 2fr);
+  grid-template-columns: 2.5fr 0.5fr 2fr 0.5fr 2fr;
   grid-template-rows: 3fr 2fr;
   grid-column-gap: 15px;
   grid-row-gap: 15px;
@@ -19,7 +19,7 @@
   font-family: "Press Start 2P", system-ui;
   font-size: 50px;
   background-color: #151515;
-  grid-area: 1 / 1 / 2 / 2;
+  grid-area: 1 / 1 / 2 / 3;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   text-align: end;
@@ -29,7 +29,7 @@
 
 .avatar-block {
   background-color: #151515;
-  grid-area: 1 / 2 / 2 / 3;
+  grid-area: 1 / 3 / 2 / 4;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   display: flex;
@@ -43,7 +43,7 @@
 
 .bio-block {
   background-color: #151515;
-  grid-area: 1 / 3 / 2 / 4;
+  grid-area: 1 / 4 / 2 / 6;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -54,7 +54,7 @@
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .easteregg-block {
-  grid-area: 2 / 2 / 3 / 3;
+  grid-area: 2 / 2 / 3 / 4;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,7 +69,7 @@
 
 .resources-block {
   background-color: #151515;
-  grid-area: 2 / 3 / 3 / 4;
+  grid-area: 2 / 4 / 3 / 6;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
